[package]
name = "hold_s3"
version = "0.1.0-alpha.5"
description = "AWS S3 provider for Hold, the Rust file storage engine"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/enseadaio/hold"
documentation = "https://docs.rs/hold_s3"
readme = "../README.md"

[dependencies]
hold = "0.1.0-alpha.5"
async-trait = "^0.1.30"
rusoto_core = { version = "^0.43.0", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "^0.43.0", default_features = false, features = ["rustls"] }
rusoto_credential = "^0.43.0"
futures = "^0.3"
tokio = { version = "^0.2", features = ["io-util"] }
tracing = "^0.1"
tracing-futures = "^0.2"
log = "^0.4"