[package]
name = "hold"
version = "0.1.0-alpha.1"
description = "Rust file storage engine, supporting multiple storage backends"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/enseadaio/hold"
documentation = "https://docs.rs/hold"
readme = "../README.md"

[dependencies]
async-trait = "0.1.30"
snafu = "0.6.8"

[dev-dependencies]
rand = "0.7.3"