[package]
name = "hold"
version = "0.1.0-alpha.5"
description = "Rust file storage engine, supporting multiple storage backends"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/enseadaio/hold"
documentation = "https://docs.rs/hold"
readme = "../README.md"

[dependencies]
async-trait = "^0.1"
snafu = "^0.6"
"futures" = "^0.3"
bytes = "^0.5"

[dev-dependencies]
rand = "0.7.3"